--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,22 +11,22 @@ license = "MIT OR Apache-2.0"
 keywords = ["bevy", "gamedev", "internationalization", "localization", "plugin"]
 categories = ["games", "game-development", "internationalization", "localization"]
 exclude = [".github/**/*"]
+resolver = "2"
 
 [dependencies]
 ahash = "0.7.4"
 anyhow = "1.0.40"
-bevy = { version = "0.5.0", default-features = false }
-fluent = "0.15.0"
+bevy = { version = "0.6.1", default-features = false }
+fluent = "0.16.0"
 indexmap = "1.6.2"
 intl-memoizer = "0.5.1"
-parking_lot = "0.11.1"
-ron = "0.6.4"
+parking_lot = "0.12.0"
+ron = "0.7.0"
 serde = { version = "1.0.126", features = ["derive"] }
 unic-langid = { version = "0.9.0", features = ["serde"] }
 
 [dev-dependencies]
-bevy = { version = "0.5.0", default-features = false, features = [
-    "bevy_wgpu",
+bevy = { version = "0.6.1", default-features = false, features = [
     "bevy_winit",
     "render",
     "x11",
